--- a/src/main/resources/webapp/assets/cover.css
+++ b/src/main/resources/webapp/assets/cover.css
@@ -44,6 +44,7 @@ body {
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 
+  background-size: 100% auto;
   background-image: url("http://eathealthyplans.com/wp-content/uploads/2015/12/5-Vital-Foods-For-Effective-Detox-1200x800.jpg");
 }
 .site-wrapper-inner {
