--- a/src/main/resources/webapp/templates/videos.html
+++ b/src/main/resources/webapp/templates/videos.html
@@ -15,7 +15,7 @@
           integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
           crossorigin="anonymous"/>
 
-    <link href="jumbotron.css" rel="stylesheet" />
+    <link href="jumbotron.css" rel="stylesheet"/>
 
     <title>Les belles vidéos</title>
 </head>
@@ -35,21 +35,21 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Les vidéos</a></li>
-                <li><a href="#">Les programmes</a></li>
-                <li><a href="#">Autre chose</a></li>
+                <li><a href="#">Votre profil</a></li>
+                <li><a href="#">A propos</a></li>
             </ul>
         </div><!--/.navbar-collapse -->
     </div>
 </nav>
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-            jumbotron and three supporting pieces of content. Use it as a starting point to create something more
-            unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+
+        <h2 th:text="${hero.title}"/>
+
+        <iframe th:src="${hero.url}" width="800" height="550" frameborder="0"></iframe>
+
+        <p th:text="${hero.description}"/>
     </div>
 </div>
 
@@ -57,29 +57,25 @@
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <h2>Toutes les vidéos</h2>
+            <p>Accèder à toutes nos vidéos blabla</p>
+            <p><a class="btn btn-default" href="#" role="button">Accèder à toutes nos vidéos &raquo;</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <h2>Le calendrier</h2>
+            <p>Accéder au calendrier blabla</p>
+            <p><a class="btn btn-default" href="#" role="button">Accéder au calendrier &raquo;</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
+            <h2>Les programmes</h2>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
                 porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
                 fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="#" role="button">Accèder aux programmes&raquo;</a></p>
         </div>
     </div>
 
-    <hr />
+    <hr/>
 
     <footer>
         <p>&copy; 2015 Company, Inc.</p>
